tab替换成空格,增加配置文件

--- a/AutoTest/AutoTest.vcxproj.filters
+++ b/AutoTest/AutoTest.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="AutoTestResult.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="conf.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AutoTest.cpp">
