--- a/AutoTest/AutoTest.vcxproj
+++ b/AutoTest/AutoTest.vcxproj
@@ -188,6 +188,7 @@
     <ClInclude Include="AutoTest.h" />
     <ClInclude Include="AutoTestDlg.h" />
     <ClInclude Include="AutoTestResult.h" />
+    <ClInclude Include="conf.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
