--- a/AutoTest/AutoTest.vcxproj.filters
+++ b/AutoTest/AutoTest.vcxproj.filters
@@ -39,6 +39,12 @@
     <ClInclude Include="conf.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="tool.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Net.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AutoTest.cpp">
@@ -51,6 +57,12 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="AutoTestResult.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="tool.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Net.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
